# saxobank-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: get_all_exchanges.rs  get_user_info.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: client.rs  error.rs  lib.rs
src/messages/: mod.rs
src/messages/port/v1/: clients.rs  users.rs
src/messages/portfolio/: clients.rs  users.rs
src/messages/reference_data/: exchanges.rs
src/port/v1/: clients.rs  mod.rs  users.rs
tests/: integration_tests.rs
