[package]
name = "saxobank-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
clap = { version = "4.1.6", features = ["cargo"] }
http = "0.2.8"
mockall = "0.11.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
serde_test = "1.0.152"
tokio = { version = "1.22.0", features = ["full"] }
